<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Enter Email Id</string>
    <string name="password">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot">Forgot Password</string>
    <string name="login">Login</string>
    <string name="linkToRegister">Click here to Register</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
