<resources>
    <string name="app_name">Cinematics</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Movies World</string>
    <string name="slide_1_desc">Watch Movies details and Reviews</string>
    <string name="slide_2_title">Trailer Videos </string>
    <string name="slide_2_desc">Watch Movie Trailers</string>
    <string name="slide_3_title">See Movie Reviews</string>
    <string name="slide_3_desc">Movie Details </string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Cinematics now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plot">Plot</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="movie_title">Cinematics</string>
    <string name="fav">There is No Favourites</string>
    <string name="here_i_am_showing_movie_poster">Here I am Showing Movie Poster</string>
    <string name="widget">Click Widget Menu ICon</string>
    <string name="u">User Login Image</string>
    <string name="movie_title_indication">Movie Title Indication</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="calender_indication">Calender Indication</string>
    <string name="rating_indication">Rating Indication</string>
    <string name="favimage">favimage</string>
    <string name="movietitle">MovieTitle</string>
    <string name="movie_trailers">Movie Trailers</string>
    <string name="movie_reviews">Movie Reviews</string>
    <string name="password_reset">password Reset</string>
    <string name="movie_titless">movie_title</string>
    <string name="auther">Auther</string>
    <string name="review">review</string>
    <string name="welcome_screen">Welcome_Screen</string>
    <string name="vidoeicon">vidoeicon</string>
    <string name="eng">English Movies</string>
    <string name="telu">Telugu Movies</string>
    <string name="hind">Hindi Movies</string>
    <string name="wel">Welocme To Movies</string>
    <string name="hor">Horror Movies</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_pas">Enter password!</string>
    <string name="passshort">Password too short, enter minimum 6 characters!</string>
    <string name="emailoncom">createUserWithEmail:onComplete:</string>
    <string name="authfa">Authentication failed.</string>
    <string name="no_internet">No_Internet</string>
    <string name="addfav">Added to Favorites</string>
    <string name="email_l">Enter email address!</string>
    <string name="pas_l">Enter password!</string>
    <string name="reg">Enter your registered email id</string>
    <string name="inst">We have sent you instructions to reset your password!</string>
    <string name="sendres">Failed to send reset email!</string>
    <string name="adwid">Added Widget</string>
    <string name="user">USER</string>
    <string name="logout">Logout</string>
    <string name="widgets">widgets</string>
</resources>
