<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Review author"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/author"
        android:textSize="10dp"
        android:textAllCaps="true">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Review Content"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content"
        android:textSize="10dp"
        android:textAllCaps="true">
    </TextView>

</LinearLayout>