...
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
...
